src/test/ui/type/type-annotation-needed.stderr
error[E0283]: type annotations needed
  --> $DIR/type-annotation-needed.rs:5:5
   |
LL | fn foo<T: Into<String>>(x: i32) {}
   |           ------------ required by this bound in `foo`
...
LL |     foo(42);
   |     ^^^ cannot infer type for type parameter `T` declared on the function `foo`
   |
   = note: cannot satisfy `_: Into<String>`
help: consider specifying the type argument in the function call
   |
LL |     foo::<T>(42);
   |        ^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0283`.
